Drop ZINC/SBT URI scheme